<resources>
    <string name="app_name">Hiker</string>

    <!-- New_Trail_Activity -->
    <string name="trailName_Hint">What is the name of this trail?</string>
    <string name="trailLength_Hint">Insert trail length here</string>
    <string name="trailElev_Hint">Insert trail elevation here</string>
    <string name="trailDesc_Hint">Give a description of this trail!</string>
    <string name="fivemiles"><![CDATA[< 5 Miles]]></string>
    <string name="fivetotenmiles">5 &#8211; 10 Miles</string>
    <string name="fifteenmiles"><![CDATA[> 15 Miles]]></string>
    <string name="sevenhunmiles"><![CDATA[< 700 ft]]></string>
    <string name="sevenhtofivehmiles">700 &#8211; 1500 ft</string>
    <string name="fifteenhmiles"><![CDATA[> 1500 ft]]></string>
    <string name="waterfalls">Waterfalls</string>
    <string name="creeks">Creeks</string>
    <string name="wildlife">Wildlife</string>
    <string name="features">Features?</string>
    <string name="elevation_change">Elevation Change?</string>
    <string name="hikelength">How Far Should We Hike?</string>
    <string name="submit">Submit</string>
    <string name="addImage">Add Image</string>
    <string name="deleteTrail">Delete Trail</string>

    <!-- New Trip Activity -->
    <string name="departureDate"> Enter Departure Date</string>
    <string name="returnDate"> Enter Return Date</string>
    <string name="returnTime"> Enter Expected Return Time</string>
    <!-- Chat_related -->
    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>

    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>

    <!-- messages -->
    <string name="message_welcome">Welcome to </string>
    <plurals name="message_participants">
        <item quantity="one">There\'s %d participant</item>
        <item quantity="other">There are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>
    <string name="title_activity_login">Join</string>

    <!-- Strings related to login -->
    <string name="prompt_username">What will be your username?</string>

    <string name="action_sign_in">Join</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="update_add_trip">Update/Add Trip</string>
    <string name="channel_name">channel name</string>
    <string name="channel_description">channel descritption</string>
    <string name="confirmButtonDescription">This will disable the emergency notification feature</string>
    <string name="confirmButton">Confirm Safe Return From Trip</string>
    <string name="title_activity_update_emergency_contact">UpdateEmergencyContact</string>
</resources>
